# medigraph-ai

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  pages.yml
docs/: API.md  ARCHITECTURE.md  BUSINESS_CASE.md  CLINICAL_USE_CASES.md  CONNECTORS.md  DATA_MODEL.md  DEPLOYMENT.md  ROADMAP.md  SECURITY.md
medigraph/: __init__.py  config.py
medigraph/api/: __init__.py  main.py
medigraph/connectors/: __init__.py  base.py  catalog.py  ccda.py  csv_connector.py  fhir_connector.py  hl7v2.py  neo4j_connector.py  snowflake_connector.py
medigraph/data/: __init__.py  generator.py
medigraph/data/synthetic/: conditions.csv  encounters.csv  medications.csv  observations.csv  patients.csv  providers.csv
medigraph/domain/: __init__.py  models.py  terminology.py
medigraph/graph/: __init__.py  analysis.py  base.py  cypher_guard.py  embedded.py  neo4j_backend.py
medigraph/llm/: __init__.py  base.py  mock_planner.py  openai_planner.py
medigraph/security/: __init__.py  audit.py  auth.py  deidentify.py  rbac.py
medigraph/services/: __init__.py  analytics.py  cohort.py  decision_support.py  fhir.py  nlp.py  qa.py
scripts/: export_web_demo.py
tests/: conftest.py  test_api.py  test_cohort.py  test_connectors.py  test_cypher_guard.py  test_decision_support.py  test_fhir.py  test_graph.py  test_nlp.py  test_security.py
ui/: streamlit_app.py
website/: index.html
