[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medigraph-ai"
version = "2.0.0"
description = "LLM-enabled healthcare knowledge-graph platform with clinical decision support, population health, clinical NLP and FHIR interoperability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aravind Balaji" }]
keywords = ["healthcare", "knowledge-graph", "fhir", "clinical-decision-support", "neo4j", "llm", "graphrag"]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.18.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
live = ["neo4j>=5.15.0", "snowflake-connector-python>=3.6.0", "openai>=1.3.0", "pyvis>=0.3.2"]
dev = ["pytest>=7.4.0", "httpx>=0.26.0", "ruff>=0.3.0"]

[project.scripts]
medigraph-generate-data = "medigraph.data.generator:main"
medigraph-api = "medigraph.api.main:run"

[tool.setuptools.packages.find]
include = ["medigraph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
